proisl.css
/* colors */
:root {
    --color_main: #1E90FF;
    --color_dark: #036CD2;
    --color_very_dark: #063868;
    --color_light: #6CB7FF;
    --color_very_light: #AED7FF;
}

#portrait {
    float: right;
    margin-left: 1em;
    max-width: 38%;
}

body {
    font-family: Helvetica, sans-serif;
    color: #333333;
    max-width: 50em;
    margin: auto;
    line-height: 1.5;
    padding: 0 0.5em;
}

h1, h2, h3, h4, h5, h6 {
    color: var(--color_very_dark);
}

strong {
    color: var(--color_very_dark);
}

a:link {
    color: var(--color_dark);
}

a:visited {
    color: var(--color_very_dark);
}

header.navigation {
    /* overflow: hidden; */
    background-color: var(--color_main);
}

header.navigation h1 {
    /* display: block; */
    color: var(--color_very_light);
    text-align: left;
    padding: 0.5em 0.75em;
    margin: 0;
}

header.navigation h1 a {
    color: var(--color_very_light);
    text-decoration: none;
}

#menu_icon {
    height: 0.7em;
}

header h2.author {
    display: none;
}

nav {
    /* list-style-type: none; */
    /* margin: 0; */
    /* padding: 0; */
    overflow: hidden;
    background-color: var(--color_light);
    border-style: solid none none none;
    border-color: white;
    border-width: 0.2em;
}

nav a {
    float: left;
    display: block;
    text-align: center;
    padding: 0.5em 0.75em;
    text-decoration: none;
}

nav a:hover:not(.current) {
    background-color: var(--color_very_dark);
    color: var(--color_very_light);
}

nav a:link {
    color: var(--color_very_dark);
}

nav a:visited {
    color: var(--color_very_dark);
}

header.navigation a.icon {
    display: none;
}

/* When the screen is less than 30em wide, hide the navigation bar and
   show the menu icon */
@media screen and (max-width: 30em) {
    nav.topnav {
	display: none;
    }
    header.navigation a.icon {
	float: right;
	display: block;
    }
    /* Display the menu vertically when clicking on the icon (class
       "responsive" is added dynamically using JavaScript) */
    nav.topnav.responsive {display: block;}
    nav.topnav.responsive a {
  	float: none;
  	text-align: left;
    }
}

.current {
    background-color: var(--color_dark);
    color: var(--color_very_light);
}

.current:link {
    color: var(--color_very_light);
}

.current:visited {
    color: var(--color_very_light);
}

footer {
    font-size: small;
    background-color: var(--color_light);
    color: var(--color_very_dark);
    padding: 0.5em 0.75em;
}

